--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "chromadb>=1.3.3",
+    "notebook>=7.4.7",
+    "pandas>=2.3.3",
+]
 
 [projects.scripts]
 eventiq = "eventiq:main"
